Added getPropValues() for reading .config as per advised by a piazza answer